Updated text truncate style. Fixed storybook after merge.

--- a/.storybook/story-docs-style.css
+++ b/.storybook/story-docs-style.css
@@ -1,3 +1,7 @@
+.sbdocs-content {
+  padding-inline: var(--cetec-sizes-48);
+}
+
 h1,
 h2,
 h3,
